--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bracket-quote-tools",
   "displayName": "Bracket & Quote Tools",
   "description": "Easily edit brackets, quotes, and tags in VSCode—select, wrap, replace, or remove with minimal keybindings.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "publisher": "wanyako",
   "engines": {
     "vscode": "^1.80.0"
@@ -10,6 +10,7 @@
   "categories": [
     "Programming Languages"
   ],
+  "icon": "icon.png",
   "keywords": [
     "bracket",
     "quote",
